--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 Snakeoil Release Notes
 ======================
 
+snakeoil 0.2:
+
 * snakeoil.fileutils.iter_read_bash and friends grew an allow_inline_comment
   param to control stripping of inlined comments; defaults to True.
 
