--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 Snakeoil Release Notes
 ======================
 
+
+* AtomicFile now marks itself as initially finalized until it has a fd; this
+  removes spurios complaints from __del__
+
 * LimitedChangeSet got an additional kwarg; key_validator.  A function can
   be passed in via this to do validation of the desired key- either it throws
   an exception, or returns the key to use.
