--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,9 @@ Snakeoil Release Notes
 ======================
 
 
+* pkgcore ticket 215; fixup corner case errors in normpath cpy.
+
+
 snakeoil 0.3: August 28, 2008
 
 * refactor dependant_methods to stop creating strong cycles that the python
