--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ Snakeoil Release Notes
 ======================
 
 
+snakeoil 0.3.1: November 7, 2008
+
 * pkgcore ticket 215; fixup corner case errors in normpath cpy.
 
 
