--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,10 @@ Snakeoil Release Notes
 ======================
 
 
+* for test_demandload_usage, output the exception that caused the demandload
+  'touch' to fail.
+
+
 snakeoil 0.3.1: November 7, 2008
 
 * pkgcore ticket 215; fixup corner case errors in normpath cpy.
