--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
 Snakeoil Release Notes
 ======================
 
-snakeoil 0.3.2: TBD
+snakeoil 0.3.2: March 24, 2009
 
 * handle a race condition in ensure_dirs where the directory is created
   underfoot (thus a non issue).
