--- a/NEWS
+++ b/NEWS
@@ -2,9 +2,21 @@ Snakeoil Release Notes
 ======================
 
 
+* snakeoil.osutils.readlines was expanded out into multiple functions,
+  utf8, ascii, utf8_strict, ascii_strict, and bytes.  'Strict' means
+  that we always want it decoded.  Non strict is useful when the file
+  has some utf8 in it you don't care about, and don't want to take
+  the codecs.open performance hit under py2k.  Under py3k, it's always
+  decoded (required due to py3k changes).
+
 * snakeoil.osutils.readfile was expanded out into multiple functions,
   utf8, ascii, ascii_strict, and bytes.  Use the appropriate one- this
   will make py3k compliance far easier.
+
+* optimization in snakeoil.osutils.readlines; for small files, it's
+  roughly a 4-8% speedup, for larger files (over half a meg) growing
+  past 25%.  This puts it's performance at roughly 2x over the open
+  equivalent for small files, and near 10-15% faster for larger files.
 
 * snakeoil.klass grew new properties to ease common tasks;
   jit_attr (invoke the target func to get the value, cache the value,
@@ -13,6 +25,9 @@ Snakeoil Release Notes
   targets).
 
 * snakeoil.compatibility additions; next, cmp, file_cls, and is_py3k.
+
+* snakeoil.klass.cached_hash; decorator to automatically cache the results
+  of the target function.  primarily intended for __hash__ implementations.
 
 * snakeoil.klass.generate_richcmp_from_cmp ; metaclass to generate
   __le__, __lt__, __gt__, __eq__, etc, via invoking __cmp__.  Primarily
@@ -42,11 +57,6 @@ Snakeoil Release Notes
 * snakeoil.test.test_demandload_usage now supports blacklisting- this
   is primarily useful for blocking py3k specific modules from being checked
   under py2k, and vice versa.
-
-* optimization in snakeoil.osutils.readlines; for small files, it's
-  roughly a 4-8% speedup, for larger files (over half a meg) growing
-  past 25%.  This puts it's performance at roughly 2x over the open
-  equivalent for small files, and near 10-15% faster for larger files.
 
 * in test_demandload_usage helper functionality it's possible for
   a file to disappear under it's feet- ignore it, lock files from
