--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,14 @@
 Snakeoil Release Notes
 ======================
 
+
+* add test_slot_shadowing; basically looks for __slots__ usage where
+  a derivative class adds slotting the parent already provides, thus
+  leading to a very unfun set of bugs and wasted memory.
+
+* fix test_demandload_usage to properly recurse...
+
+
 snakeoil 0.3.4: December 13th, 2009
 
 * add compatibility.is_py3k_like for marking if it's >=py2.7, or py3k
