--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,11 @@ Snakeoil Release Notes
 ======================
 
 
+* enable a set of extensions for slots backed mappings; primarily affects
+  pkgcore cache data objects, end result being pquery against a full
+  repo in raw mode is about 8% faster overall.
+
+
 snakeoil 0.3.5: December 27th, 2009
 
 * snakeoil.struct_compat module was added; provides py2.4 compat, and
