--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ Snakeoil Release Notes
 ======================
 
 
+snakeoil 0.3.6: January 8th, 2010
+
 * add a cpy extension for jit_attr functionality; this brings the
   overhead down to effectively background noise for most usages.
 
