--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,14 @@ Snakeoil Release Notes
 ======================
 
 
+snakeoil 0.3.6.3: March 14th, 2010
+
+* 'dumb' terminfo is no longer tempted- to useless to hack around it.
+
+* get_formatters now properly falls back to plain text formatting if no
+  terminfo could be found.
+
+
 snakeoil 0.3.6.2: February 15th, 2010
 
 * overhauls to 2to3k support; speedup caching by near 16% via moving it into
