--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ Snakeoil Release Notes
 ======================
 
 
+snakeoil 0.3.6.5: May 21st, 2010
+
 * add discard method to AtomicWriteFile to intentionally discard the
   updated content.
 
