pull in some enhancements to ForcedDepends

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,10 @@ Snakeoil Release Notes
 ======================
 
 
+* snakeoil.dependant_methods.ForcedDepends grew two new methods;
+  __set_stage_state__ for tweaking stage state manually, and
+  __stage_step_callback__ for being notified on each stage completed.
+
 * pkgcore ticket 172; posix access technically allows for a root invoker to
   get a True result when doing X_OK on a non-executable file; this renders the
   function a fair bit useless for doing $PATH lookups for example, so we bundle
