--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ Snakeoil Release Notes
 ======================
 
 
+* correct an off by one in caching_iter.
+
 * snakeoil.dependant_methods.ForcedDepends grew two new methods;
   __set_stage_state__ for tweaking stage state manually, and
   __stage_step_callback__ for being notified on each stage completed.
