handle python 7567 for the time being by suppressing the tests under py3.2; initial jython work, new data_source, and unlink_if_exists

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ Snakeoil Release Notes
 ======================
 
 
+* initial work towards jython2.5 support.
+
 * Massive amount of docstring work.  Yes, snakeoil is now documented and has
   examples.
 
