--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 Snakeoil Release Notes
 ======================
 
+snakeoil 0.4: April 24th, 2011
 
 * added snakeoil.klass.immutable_instance metaclass and an equivalent inject
   function for modifying the scope.  These are used to avoid classes adhoc'ing
