--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,9 @@ Snakeoil Release Notes
 ======================
 
 
+* currying.alias_class_method is now deprecated; use klass.alias_method
+  instead.
+
 * handle differing lib2to3 dependant on multiprocessing existance.
 
 
