--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ Snakeoil Release Notes
 ======================
 
 
+* snakeoil.unittest_extensions was split out from distutils_extensions.
+
 * snakeoil.obj.make_SlottedDict_kls moved to mappings; it'll be removed from
   snakeoil.obj in 0.5.
 
