--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ Snakeoil Release Notes
 ======================
 
 
+* issue 7567; python2.7.1 reintroduces it (2.7 lacked it).  Gentoo bug 350215.
+
 * snakeoil.unittest_extensions was split out from distutils_extensions.
 
 * snakeoil.obj.make_SlottedDict_kls moved to mappings; it'll be removed from
