--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 Snakeoil Release Notes
 ======================
 
+snakeoil 0.4.1: Jun 22nd, 2011
 
 * issue 7567; python2.7.1 reintroduces it (2.7 lacked it).  Gentoo bug 350215.
 
