--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ Snakeoil Release Notes
 ======================
 
 
+* add distutils_extension for building sphinx docs
+
 * if the invoking python has issue 7604 fixed, then use a fast single lookup
   version of delitem for slotted instances; else use the normal double lookup
   workaround.
