add cached_property, and make jit_attr properly notify the vm of recursion
cached_property is a faster, although slot incompatible, form of jit_attr.
Vm recursion removes a segfault potential when used improperly.

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,9 @@ Snakeoil Release Notes
 ======================
 
 
+* added klass.cached_property, and fixed klass.jit_attr to block bad usage
+  that goes recursive.
+
 * add distutils_extension for building sphinx docs
 
 * if the invoking python has issue 7604 fixed, then use a fast single lookup
