--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,10 @@ Snakeoil Release Notes
 ======================
 
 
+* compatibility.raise_from; compatibility across py2k/py3k for doing py3k
+  raise EXCEPTION from CAUSE; see pep3134.  Primarily for raising an exception
+  which was caused by another (casting an exception essentially).
+
 * added klass.cached_property, and fixed klass.jit_attr to block bad usage
   that goes recursive.
 
