--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ Snakeoil Release Notes
 ======================
 
 
+* added snakeoil.process for getting processor count
+
 * don't install compatibility_py3k.py if we're targetting py2k; no need,
   and it pisses off pyc generation.
 
