--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,9 @@ Snakeoil Release Notes
 ======================
 
 
+* snakeoil.osutils.read* moved to snakeoil.fileutils; compatibility
+  shim will be removed in 0.5.
+
 * fileutils.write_file was added for quick one off writes.
 
 * chksums generation now will parallelize where worthwhile.  Since this is
